--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "@prisma/client": "^4.10.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.10.0",
